# spotly

./: .gitignore  Dockerfile  README.md  docker-compose.dev.yaml  docker-compose.yaml  mongo-init.js  pyproject.toml
app/: README.md  __init__.py  logger.py  settings.py
app/api/: __init__.py  admin.py  health.py  signup.py
app/api/decorators/: jwt_validation.py
app/api/routes/: __init__.py  admin.py  auth.py  health.py  signup.py
app/api/schemas/: auth_schemas.py  schemas.py
app/domain/: bmodel.py  dbmodel.py  invitation.py  user.py
app/domain/models/: bmodel.py  invitation.py  user.py
app/domain/ports/: ia_service_port.py
app/infraestructure/email/: brevo_service.py  interface.py
app/infrastructure/database/: __init__.py  lifespan.py
app/infrastructure/database/repositories/: base_repository.py  invitation_repository.py  user_repository.py
app/infrastructure/email/: __init__.py  brevo_service.py  interface.py  resend_email_service.py
app/infrastructure/ia/: ia_service.py
app/infrastructure/repositories/: database.py
app/services/csv_invitation/: csv_invitation.py  exceptions.py
app/services/register_user/: exceptions.py  register_user.py
app/services/use_cases/: csv_invitation.py  cv_processor.py  get_user.py  register_user.py  user_login.py
app/services/user_login/: user_login.py
client/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
nginx/: nginx.conf
nginx/conf.d/: backend.conf
tests/: README.md  test_base_repository.py  test_csv_invitations.py  test_invitation.py  test_invitation_and_bmodel.py
