[project]
name = "spotly-app"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Federico Paganini", email = "perfedefer@gmail.com" }
]

# dependencias principales
dependencies = [
    "fastapi[standard]",
    "uvicorn",
    "httpx",
    "pydantic",
    "pydantic-settings",
    "email-validator",
    "authlib",
    "werkzeug",
    "requests",
]

[project.optional-dependencies]
dev = [
    "respx",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]