[project]
name = "spotly-backend"
version = "0.1.0"
description = "Spotly backend service"
authors = [
    {name = "Federico Paganini perfedefer@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi[standard] (>=0.118.0,<0.119.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.11.10,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "authlib (>=1.6.5,<2.0.0)",
    "werkzeug (>=3.1.3,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "resend (>=2.15.0,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "respx (>=0.22.0,<0.23.0)"
]
